assets/css/global.css
@import '../css/reset.css';
@import '../css/fonts.css';

:root {
	--color-primary: #f0e600;
	--color-second: #178fe8;
	--color-third: #ff1f9f;
	--color-fourth: #efd100;
	--color-text: #878771;
	--color-text-lite: #cdcda9;
	--color-offwhite: #e7e7d3;
	--color-white: #e7e7d3;
	--color-bg: #292829;
	--color-bg-darker: #1e1e1e;
	--color-shdw: #cdcda991;
}

html,
body {
	background-color: var(--color-offwhite);
	font-family: 'Hyper Regular';
	color: var(--color-text-lite);
	font-size: 62.5%;
	touch-action: manipulation;
}

body {
	font-size: 1.6rem;
	text-align: center;
}
h2,
h3 {
	font-family: 'Hyper Regular';
	font-size: 1rem;
}
div.sitebox {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	height: 100vh;
}
header {
	background-color: var(--color-primary);
	background-image: url('../../assets/img/header-bg.svg');
	background-position: center bottom;
	background-repeat: no-repeat;
	max-height: 240px;
	border-bottom: 3px solid var(--color-fourth);
	padding: 0 24px;
}
header img {
	max-width: 420px;
	margin: 32px 0;
}
main {
	margin: 0 24px 48px;
	flex-grow: 2;
}
footer {
	background-color: var(--color-bg);
}
footer p {
	color: var(--color-text-lite);
	margin: 24px 0;
}
div.ribbon-black {
	display: flex;
	flex-shrink: 0;
	font-size: 1.4rem;
	background-color: var(--color-bg-darker);
	margin: 0;
	padding: 8px 0;
	overflow: hidden;
	text-align: center;
	user-select: none;
}
div.ribbon-black span {
	display: inline-block;
	padding: 0 16px 0 9px;
	background-image: url('../../assets/img/bullet.svg');
	background-repeat: no-repeat;
	background-position: right 3px;
}

ul.linklist {
	max-width: 420px;
	margin: 24px auto 0;
	padding-bottom: 24px;
	background-image: url('../../assets/img/accent-end_dots.svg');
	background-position: center bottom;
	background-repeat: no-repeat;
}
ul li {
	margin: 16px 0;
	padding: 0;
}
ul li > a {
	border-radius: 14px;
	display: block;
	padding: 16px;
	background-color: var(--color-bg-darker);
	transition: all 0.1s ease-in-out;
	box-shadow: 0 4px 0px var(--color-text-lite);
}
ul li > a:hover {
	transform: scale(1.04);
	background-color: var(--color-bg-darker);
	box-shadow: 0 16px 0px -8px var(--color-shdw);
}
ul li > a:active {
	transform: scale(1);
	box-shadow: 0 4px 0px var(--color-text-lite);
}
ul li > a:active > * {
	opacity: 0.5;
}

ul li > a > h2 {
	color: var(--color-offwhite);
	font-size: 2.4rem;
	margin-bottom: 8px;
}
ul li > a > h3 {
	color: var(--color-offwhite);
	font-size: 2rem;
}
ul li > a > p {
	color: var(--color-text);
	font-size: 1.6rem;
}

